# realtime-chat

./: README.md
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  test_ws.py
backend/alembic/: env.py
backend/alembic/versions/: 0c865c681bb9_init.py  b4486941c898_.py  b694c6a9d778_initial.py  e320922dc96d_chat_members.py
backend/src/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  websocket_manager.py
backend/src/api/: auth.py  chats.py  messages.py
backend/src/auth/: dependencies.py  hashing.py  jwt.py
backend/src/core/: config.py
backend/src/database/: database.py
backend/src/models/: chat.py  member.py  message.py  user.py
backend/src/schemas/: chat.py  message.py  user.py
backend/src/websocket/: manager.py  routes.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: Chat.tsx  Login.tsx  Register.tsx
